# mouse1rs

./: Cargo.toml  LEV2.KR3  LEV3.KR3  LEV4.KR3  LEV5.KR3  MOUSE1.ART  README.md  lev1.kr3  lev1.tga
assets/: player.tga  vga.pal
assets/levels/: level0.bcg.tga  level1.tga  level2.bcg.tga  level3.hit  level4.bcg.tga
assets/levels/0/: map.hit
assets/levels/1/: bcg.tga  map.hit
assets/levels/2/: fg.tga  map.hit
assets/levels/3/: bcg.tga  fg.tga  map.hit
assets/levels/4/: fg.tga  map.hit
src/: constant.rs  game_complete.rs  hit_map.rs  level.rs  level_opening.rs  logging.rs  lost_life.rs  main.rs  menu.rs  mouse.rs  player.rs  preload.rs
src/menu/: scene.rs
src/mouse/: assets.rs  scene.rs
