[package]
name = "mouse1rs"
description = "The Mouse 1 in Rust"
version = "0.0.1"
authors = ["odanek <ondrej.danek@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/odanek/mouse1rs"
default-run = "mouse1rs"

[profile.release]
lto = true

[[bin]]
name = "ob5totga"

[dependencies]
log = "0.4.14"
cgm = { path = "../cgm" }
quad = { path = "../quad" }
anyhow = "1.0.58"